# ScolarGrid

./: .dockerignore  .env.example  .env.production.template  .gitignore  BACKEND_PROGRESS.md  CLOUDINARY_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICK_REFERENCE.md  Dockerfile  FRONTEND_BACKEND_INTEGRATION_ISSUES.md  INTEGRATION_COMPLETE.md  INTEGRATION_COMPLETE_FINAL.md  INTEGRATION_STATUS.md  INTEGRATION_STATUS_FINAL.md  INTEGRATION_SUCCESS.md  PROJECT_REPORT.html  PROJECT_STATUS.md  QUICK_START.md  QUICK_TEST_GUIDE.md  README.md  RUN_BACKEND.txt  ScholarGrid.html  TESTING.md  TESTING_GUIDE.md  alembic.ini  deleted_files.txt  docker-compose.yml  eslint.config.js  eslint_out.json  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  run_tests.py  schema.sql  schemas.sql  supabase_setup.sql  tailwind.config.js  (+5 more)
.chrome-pdf-profile/: e2fb95c8-c2b3-4b49-882f-092f6bbafd45.tmp
alembic/: README.md  env.py
app/: __init__.py  config.py  firebase_service.py  main.py  socket_server.py
docs/: TESTING_MIGRATIONS.md
scholargrid_backend_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: generate_migration.py  health_check.py  recalculate_scores.py  run_migrations.py  seed_admin.py  verify_env.py
server/: app.js  data.json  db.js  init-db.js  migrate.js  mysql_schema.sql  package-lock.json  package.json  schema.sql  setup_tables.sql
src/: App.jsx  index.css  main.jsx
tests/: __init__.py  conftest.py  test_activity_properties.py  test_ai_chatbot_models.py  test_ai_chatbot_properties.py  test_api_documentation.py  (+34 more)
(+107 files in other folders)
