[project]
name = "scholargrid-backend-api"
version = "0.1.0"
description = "ScholarGrid Backend API - Academic note-sharing platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "redis==5.2.0",
    "firebase-admin==6.6.0",
    "python-socketio==5.11.4",
    "google-generativeai==0.8.3",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart==0.0.17",
    "psycopg[binary]==3.2.13",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "cloudinary==1.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "hypothesis==6.122.3",
    "httpx==0.28.1",
    "pytest-cov==6.0.0",
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
